<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/iv_Return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:contentDescription="@null"
            android:src="@drawable/btn_back_detail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/My_collection"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:text="@string/text_Edit"
            android:textColor="#827E7E"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:layout_below="@id/rl"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#827E7E" />

        <ImageView
            android:id="@+id/iv_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:layout_centerInParent="true"
            android:paddingBottom="10dp"
            android:src="@drawable/ic_no_favor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_retry"
            android:layout_marginTop="12dp"
            android:layout_centerHorizontal="true"
            android:text="@string/retry_large_image"
            android:textColor="#827E7E" />

</RelativeLayout>