<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:paddingTop="10dp"
        android:text="@string/font_size"
        android:textColor="#0080FF"
        android:textSize="24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="15dp"
        android:background="#0080FF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/small"
                android:textSize="20sp" />

            <View
                android:layout_width="0.0dp"
                android:layout_height="1.0dp"
                android:layout_weight="1.0" />

            <TextView
                android:id="@+id/font_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5.0dp"
                android:layout_marginRight="5.0dp"
                android:textSize="13.0sp" />

            <ImageView
                android:id="@+id/checkbox_small"
                android:contentDescription="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dp"
                android:src="@drawable/font_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_ln"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_ln"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/ln"
                android:textSize="20sp" />

            <View
                android:layout_width="0.0dp"
                android:layout_height="1.0dp"
                android:layout_weight="1.0" />

            <ImageView
                android:id="@+id/checkbox_ln"
                android:contentDescription="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dp"
                android:src="@drawable/font_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/big"
                android:textSize="20sp" />

            <View
                android:layout_width="0.0dp"
                android:layout_height="1.0dp"
                android:layout_weight="1.0" />

            <ImageView
                android:id="@+id/checkbox_big"
                android:contentDescription="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dp"
                android:src="@drawable/font_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/large"
                android:textSize="20sp" />

            <View
                android:layout_width="0.0dp"
                android:layout_height="1.0dp"
                android:layout_weight="1.0" />

            <ImageView
                android:id="@+id/checkbox_large"
                android:contentDescription="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dp"
                android:src="@drawable/font_size" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/cancel"
        android:textSize="16sp" />

</LinearLayout>